--- a/_data/course.yml
+++ b/_data/course.yml
@@ -10,16 +10,17 @@
   - numerical-systems
   - positional-notation
   - bases
-  - binary-arithmatic
-  - bitwise-operators
+  - binary-addition
+  - binary-multiplication
   - numerical-systems-challenges
 
 - title: Modular Arithmatic
   course:
-  - modular-arithmatic
+  - modular-arithmetic-intro
   - modulus
   - cyphers
-  - maths-with-mod
+  - modular-arithmetic
+  - modular-inverse
   - modular-challenges
 
 - title: Asymptotic Complexity
@@ -33,8 +34,9 @@
   course:
     - propositional-logic
     - intro-to-propositional-logic
-    - logical-operators
-    - proof-propositional-logic
+    - conjunction-disjunction
+    - implication
+    - bitwise-operators
     - propositional-logic-challenges
 
 - title: Set Theory
