--- a/_data/course.yml
+++ b/_data/course.yml
@@ -5,6 +5,11 @@
   - python
   - assessment
 
+- title: Introducing Mathematics
+  course:
+  - course-introduction
+  - first-challenges
+
 - title: Numerical Systems
   course:
   - numerical-systems
@@ -47,43 +52,5 @@
     - sets
     - subsets-supersets
     - set-operations
-    - proof-set-theory
     - set-theory-challenges
 
-- title: Proof
-  course: 
-    - proof
-    - intro-to-proof
-    - demorgans-laws
-
-- title: Descriptive Statistics
-  course:
-    - descriptive-statistics
-    - statistics
-    - central-tendancy
-    - spread
-    - data-visualisation
-    - descriptive-statistics-challenges
-
-- title: Probability
-  course:
-    - probability
-    - probability-basics
-    - probability-distributions
-    - combinatorics
-    - bayes-rule
-
-- title: Inferential Statistics
-  course:
-    - inferential-statistics
-    - samples-and-populations
-    - hypothesis-testing
-    - t-test
-
-
-
-- title: Examples
-  course:
-  - cheatsheet
-  - font-awesome
-  - bootstrap
