Java updates for week 2

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -18,6 +18,7 @@
   - binary-addition
   - binary-multiplication
   - numerical-systems-challenges
+  - numerical-systems-challenges-java
 
 - title: Modular Arithmatic
   course:
