--- a/_data/course.yml
+++ b/_data/course.yml
@@ -60,5 +60,9 @@
     - graph-theory
     - graphs
     - directed-graphs
+    - structure-of-language
+    - search-trees
+    - neural-networks
+    - game-object-trees
     - graph-challenges
 
