Proof mostly done

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -66,3 +66,11 @@
     - game-object-trees
     - graph-challenges
 
+- title: Proof
+  course: 
+    - proof
+    - intro-to-proof
+    - proof-by-cases
+    - proof-by-contradiction
+    - proof-by-induction
+    - proof-challenges
