--- a/_data/course.yml
+++ b/_data/course.yml
@@ -75,3 +75,8 @@
     - proof-by-contradiction
     - proof-by-induction
     - proof-challenges
+
+- title: Maths to Code
+  course:
+    - maths-to-code
+    - qgen
