--- a/_data/course.yml
+++ b/_data/course.yml
@@ -76,7 +76,34 @@
     - proof-by-induction
     - proof-challenges
 
-- title: Maths to Code
+- title: "Bonus: Maths to Code"
   course:
     - maths-to-code
     - qgen
+
+- title: Descriptive Statistics
+  course:
+    - descriptive-statistics
+    - statistics
+    - central-tendancy
+    - spread
+    - data-visualisation
+    - correlation
+    - descriptive-statistics-challenges
+
+- title: Probability
+  course:
+    - probability
+    - probability-basics
+    - probability-distributions
+    - combinatorics
+    - bayes-rule
+    - probability-challenges
+
+- title: Inferential Statistics
+  course:
+    - inferential-statistics
+    - samples-and-populations
+    - hypothesis-testing
+    - t-test
+    - inferential-statistics-challenges
