--- a/_data/course.yml
+++ b/_data/course.yml
@@ -109,5 +109,6 @@
     - probability-distributions
     - samples-and-populations
     - hypothesis-testing
+    - z-scores
     - t-test
     - inferential-statistics-challenges
